nexus/nexus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "nexus-ingress"
  labels:
    app: "nexus"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  rules:
    - host: "change-it"
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: "nexus-nexus-repository-manager"
              servicePort: 8081
